# neumann

./: CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE  README.md  TODO.md  To do.md
examples/: play_matrix_game.rs
examples/matrix_game/: main.rs
examples/poly_matrix_game/: main.rs
examples/poly_matrix_game_perturbation/: main.rs
examples/poly_matrix_game_value/: main.rs
examples/stochastic_game/: main.rs
src/: certifying.rs  equilibria.rs  games.rs  lib.rs  matrix_game.rs  stochastic_game.rs  traits.rs  value_positivity.rs
src/games/: matrix.rs  polynomial_matrix.rs  stochastic.rs
src/games/matrix/: play.rs  solvable.rs  transformation.rs  transformations.rs  types.rs
src/games/matrix/solvable/: mixed_nash.rs
src/games/matrix/solvable/mixed_nash/: completely_mixed.rs
src/games/matrix/transformation/: f64.rs  generic.rs
src/games/polynomial_matrix/: helper.rs  transformation.rs  types.rs  value_positivity.rs
src/games/polynomial_matrix/value_positivity/: helper.rs
src/matrix_game/: polynomial.rs
src/stochastic_game/: action_profiles.rs
src/traits/: research.rs  value_positivity.rs
